# llm_journey

./: Copy_of_CrewAI_agent_demo.ipynb  Copy_of_lm_playground.ipynb  ML_LinearLayer.ipynb  README.md  lm_playground.ipynb  lm_playground_1.ipynb  lm_playground_2.ipynb  lm_playground_3.ipynb
chetan_assignments/project_2/: rag_chatbot.ipynb
chetan_assignments/project_3/: ask_the_web_agent.ipynb
chetan_assignments/project_3_latest/: ask_the_web_agent_latest.ipynb  environment.yml
e2e_order_processing/: Mermaid diagram.mmd  e2e_orderprocess.excalidraw  e2e_with_agents.mmd  e2e_without_agents.mmd  mermaid_diagram.txt
project_1/: lm_playground.ipynb  lm_playground_solution.ipynb  pyproject.toml
project_2/.ipynb_checkpoints/: rag_chatbot-checkpoint.ipynb
runbook/: git-cmds.txt
temp/: temp.text  temp.txt  temp2.txt
