[project]
name = "project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "torch==2.7.0",
    "transformers==4.52.0",
    "datasets==3.6.0",
    "evaluate==0.4.3",
    "tiktoken==0.9.0",
    "accelerate==1.7.0",
    "sentencepiece==0.2.0",
    "ipython==9.2.0",
    "huggingface-hub==0.31.4",
    "ipykernel",
    "jupyterlab",
    "ipywidgets",
]
